# advent-of-code-2024

./: LICENSE  Makefile  README.md  advent-of-code2024.cabal
app/: Main.hs
days/: Common.hs  Day0.hs  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
tests/day0/: Main.hs
tests/day1/: Main.hs
tests/day10/: Main.hs
tests/day11/: Main.hs
tests/day12/: Main.hs
tests/day13/: Main.hs
tests/day14/: Main.hs
tests/day15/: Main.hs
tests/day2/: Main.hs
tests/day3/: Main.hs
tests/day4/: Main.hs
tests/day5/: Main.hs
tests/day6/: Main.hs
tests/day7/: Main.hs
tests/day8/: Main.hs
tests/day9/: Main.hs
